--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
 
 <style>
 
+select {
+	text-align: center;
+    width: 300px;  /* Adjust width as needed */
+    height: 40px;  /* Adjust height as needed */
+    background-color: #64adc4;  /* Light blue background */
+    color: white;  /* Text color */
+    font-size: 16px;  /* Adjust font size as needed */
+    border-radius: 5px;  /* Rounded corners */
+    padding-left: 10px;  /* Padding inside the dropdown */
+    border: 1px solid #4CAF50;  /* Green border to match your button styles, adjust if needed */
+    cursor: pointer;  /* Cursor changes to pointer to indicate it's a clickable element */
+}
 
+/* Styles for option elements to ensure readability */
+option {
+    background-color: white;  /* White background makes the text easier to read */
+    color: black;  /* Dark text for high contrast on light background */
+}
 
 
 
